feat: Add Ansible molecule test setup

--- a/roles/system_updates/tasks/redhat.yaml
+++ b/roles/system_updates/tasks/redhat.yaml
@@ -3,24 +3,27 @@
 - name: "Upgrade all packages"
   yum:
     name: "*"
-    state: latest
+    state: latest # noqa 403
   become: yes
 
 - name: "Reboot if required"
   block:
-    - shell: "{{ command }}"
+    - name: "Run pre-reboot check commands"
+      shell: "{{ command }}" # noqa 305
       loop: "{{ pre_reboot_checks | default(default_pre_reboot_checks) }}"
       register: check_output
       changed_when: false
       loop_control:
         loop_var: command
 
-    - shell: needs-restarting -r
+    - name: "Check if restarting is required"
+      shell: "needs-restarting -r" # noqa 305
       register: reboot_required
       failed_when: false
       changed_when: false
 
-    - reboot:
+    - name: "Reboot"
+      reboot:
       when: reboot_required.rc == 1
-  when: automatic_reboot_enabled == true
+  when: automatic_reboot_enabled
   become: yes
