--- a/roles/system_updates/tasks/debian.yaml
+++ b/roles/system_updates/tasks/debian.yaml
@@ -28,16 +28,19 @@
 
 - name: "Reboot if required"
   block:
-    - shell: "{{ command }}"
+    - name: "Run pre-reboot check commands"
+      shell: "{{ command }}" # noqa 305
       loop: "{{ pre_reboot_checks | default(default_pre_reboot_checks) }}"
       register: check_output
       changed_when: false
       loop_control:
         loop_var: command
-    - stat:
+    - name: "Check if restarting is required"
+      stat:
         path: /var/run/reboot-required
       register: reboot_required
-    - reboot:
-      when: reboot_required.stat.exists == true
-  when: automatic_reboot_enabled == true
+    - name: "Reboot"
+      reboot:
+      when: reboot_required.stat.exists
+  when: automatic_reboot_enabled
   become: yes
